.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Shift_Offer__c.object
<CustomObject>
    <description>An offer made to a single resource for one or more shifts</description>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <description>The resource that the shift is offered to</description>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Resource Shift Offers</relationshipLabel>
        <relationshipName>Resource_Shift_Offers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Response__c</fullName>
        <description>The response received from a resource in relation to an offer of work</description>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Shift_Offer__c</fullName>
        <description>The parent shift offer</description>
        <label>Shift Offer</label>
        <referenceTo>sked__Shift_Offer__c</referenceTo>
        <relationshipLabel>Resource Shift Offers</relationshipLabel>
        <relationshipName>Resource_Shift_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Status__c</fullName>
        <description>The status of the offer in relation to this resource</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>OfferFilled</fullName>
                </value>
                <value>
                    <fullName>OfferCancelled</fullName>
                </value>
                <value>
                    <fullName>ResourceOfferCancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Time_Notified__c</fullName>
        <description>The time at which the offer was most recently dispatched to the resource</description>
        <label>Time Notified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Time_Responded__c</fullName>
        <description>The time at which the response was received from the resource</description>
        <label>Time Responded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__UniqueKey__c</fullName>
        <description>Unique key comprised of the ShiftOfferId and the ResourceId. Will be populated by the trigger</description>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Resource Shift Offer</label>
    <nameField>
        <displayFormat>RSO-{00000}</displayFormat>
        <label>Resource Shift Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Shift Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>